--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 </div>
 <hr>
 <script>
-  let mqtturl = 'mqtt://0413fa44:1f7cf32d53a6b321@broker.shiftr.io';
+  let mqtturl = 'mqtts://0413fa44:1f7cf32d53a6b321@broker.shiftr.io';
   let options = {
     clientId: 'enoki',
     // 'Browser-'+Math.floor(Math.random() * 100) // ID Example: "Browser-23"
   }
-  let topic = 'testtopichogehoge';
-  // $("#clientIdHeader").text('Client ID: '+options.clientId);
+  let topic = 'testtopichoge';
+  // $("#clientIdHeader").text('hogeClient ID: '+options.clientId);
   console.log('clientId: ' + options.clientId);
   console.log('connecting to: ' + mqtturl);
   console.log(mqtt)
